--- a/prediction-api/requirements.txt
+++ b/prediction-api/requirements.txt
@@ -4,3 +4,10 @@ google-cloud-storage==1.39.0
 google_cloud_pipeline_components==0.1.1
 pandas==1.3.3
 scikit-learn==0.24.2
+flask
+pandas
+keras
+tensorflow
+numpy==1.25.2
+h5py
+six
