--- a/prediction-api/Dockerfile
+++ b/prediction-api/Dockerfile
@@ -17,8 +17,7 @@ COPY . .
 EXPOSE 5000
 
 # Environment Variables
-ENV PROJECT_ID=de23-398309
-ENV PREDICTOR_API_ENDPOINT=https://us-central1-de23-398309.cloudfunctions.net/wine_quality_predictor
+ENV PROJECT_ID='de-23-lab-1-399021'
 
 # Update meta data if necessary
 LABEL wine.quality.predictor.api="0.0.1-beta"
