--- a/model-docker/Dockerfile
+++ b/model-docker/Dockerfile
@@ -1,4 +1,5 @@
 FROM python:3.10.7-slim
+ADD pipeline_executor.py /home/pipeline_executor.py
 ADD requirements.txt ./
 RUN pip install -r requirements.txt
-ENTRYPOINT ["python"]
+ENTRYPOINT ["python","/home/pipeline_executor.py"]
